feat: add solutions to lc problem: No.2146 (#3510)
No.2146.K Highest Ranked Items Within a Price Range